bpo-41295: Allow overriding __setattr__ on multiple inheritance

The change introduced in bpo-39960, broke being able to override the
__setattr__ function unless it's done by the next class in the MRO.

For example:
```
class Meta(type):
    def __setattr__(cls, key, value):
        type.__setattr__(cls, key, value)

class OtherClass:
    pass

class DefaultMeta(OtherClass, Meta):
    pass

obj = DefaultMeta('A', (object,), {})
obj.test = True
print(obj.test)
```

Would break as it would first check if `OtherClass` has a custom
`__setattr__` and if not would raise error right away.

This change goes through the whole MRO, until it finds `type` or `object`,
and if only if no class owns the method being called it will throw an
error.

Signed-off-by: David Caro <david@dcaro.es>